src/objects/Proprietary_Tier_3__mdt.object
<CustomObject>
    <fields>
        <fullName>Credit_to_Borrower__c</fullName>
        <label>Credit to Borrower</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HeloMargin__c</fullName>
        <label>HeloMargin</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origination_to_Partner__c</fullName>
        <label>Origination to Partner</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Servicing_Fee__c</fullName>
        <label>Servicing Fee</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Proprietary Tier 3</label>
    <pluralLabel>Proprietary Tier 3</pluralLabel>
</CustomObject>